<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.langme.newmetrics.IndicatorDetailSheetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_margin="@dimen/activity_vertical_margin">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/nameTaskTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numTask" />

                <TextView
                    android:id="@+id/nameTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_blank_fragment" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/stateTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/state" />

                <TextView
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_blank_fragment" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/criticTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/critic" />

                <TextView
                    android:id="@+id/critere"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_blank_fragment" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/typoTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <TextView
                    android:id="@+id/typlogy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_blank_fragment" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/infoTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info" />

                <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_blank_fragment" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/dateCreeTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/createDate" />
                    <TextView
                        android:id="@+id/dateCree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_blank_fragment" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/deliverDateTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deliverDate" />
                    <TextView
                        android:id="@+id/deliverDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_blank_fragment" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/ecartTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ecart" />
                    <TextView
                        android:id="@+id/ecartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_blank_fragment" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/echeanceDateTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/echeanceDate" />
                    <TextView
                        android:id="@+id/echeanceDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_blank_fragment" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/resTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/res" />
                    <TextView
                        android:id="@+id/res"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_blank_fragment" />

                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnConforme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dim_btn_top"
                    android:layout_marginLeft="@dimen/dim_btn"
                    android:layout_marginRight="@dimen/dim_btn"
                    android:layout_marginTop="@dimen/dim_btn_top"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:text="Conforme" />

                <Button
                    android:id="@+id/btnNoConforme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dim_btn_top"
                    android:layout_marginLeft="@dimen/dim_btn"
                    android:layout_marginRight="@dimen/dim_btn"
                    android:layout_marginTop="@dimen/dim_btn_top"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:text="Non Conforme" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
